# shinbukan-ics

./: Cargo.toml  default.nix  shell.nix
nix/: default.nix  sources.json
src/: main.rs
src/fixtures/: 2024-02.html  2024-03.html  2024-04.html  2024-05.html  2024-06.html  2024-07.html  2024-08.html  2024-09.html  2024-10.html  2024-11.html  2024-12.html  2025-01.html  2025-02.html  2025-03.html  2025-04.html
src/snapshots/: shinbukan_ics__tests__calendar_fixtures@2024-02.html-2.snap  shinbukan_ics__tests__calendar_fixtures@2024-02.html.snap  shinbukan_ics__tests__calendar_fixtures@2024-03.html-2.snap  shinbukan_ics__tests__calendar_fixtures@2024-03.html.snap  shinbukan_ics__tests__calendar_fixtures@2024-04.html-2.snap  shinbukan_ics__tests__calendar_fixtures@2024-04.html.snap  shinbukan_ics__tests__calendar_fixtures@2024-05.html-2.snap  shinbukan_ics__tests__calendar_fixtures@2024-05.html.snap  shinbukan_ics__tests__calendar_fixtures@2024-06.html-2.snap  shinbukan_ics__tests__calendar_fixtures@2024-06.html.snap  shinbukan_ics__tests__calendar_fixtures@2024-07.html-2.snap  shinbukan_ics__tests__calendar_fixtures@2024-07.html.snap  shinbukan_ics__tests__calendar_fixtures@2024-08.html-2.snap  shinbukan_ics__tests__calendar_fixtures@2024-08.html.snap  shinbukan_ics__tests__calendar_fixtures@2024-09.html-2.snap  shinbukan_ics__tests__calendar_fixtures@2024-09.html.snap  shinbukan_ics__tests__calendar_fixtures@2024-10.html-2.snap  shinbukan_ics__tests__calendar_fixtures@2024-10.html.snap  shinbukan_ics__tests__calendar_fixtures@2024-11.html-2.snap  (+11 more)
