[package]
name = "shinbukan-ics"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
scraper = "0.19.0"
reqwest = "0.12.4"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.82"
encoding_rs = "0.8.34"
futures = "0.3.30"
chrono-tz = "0.9.0"

[dev-dependencies]
insta = { version = "1.38.0", features = ["glob"] }
